syntax = "proto3";

package appointment;

message BusinessUserHour {
  string id = 1; 
  string BusinessUserId = 2;
  string Type = 3;
  int32 Day = 4;
  string Date = 5;
  bool IsOpen = 6;
  bool IsActive = 7;
}

message BusinessUserHourCreateModel { 
  string BusinessUserId = 1;
  string Type = 2;
  int32 Day = 3;
  string Date = 4;
  bool IsOpen = 5;
  bool IsActive = 6;
}

message BusinessUserHourGetByIdModel {
    string id = 1; 
}

message BusinessUserHourGetByIdResponse {
  string id = 1; 
  string BusinessUserId = 2;
  string Type = 3;
  int32 Day = 4;
  string Date = 5;
  bool IsOpen = 6;
  bool IsActive = 7; 
}

message BusinessUserHourCreateResponse {
  string id = 1; 
  string BusinessUserId = 2;
  string Type = 3;
  int32 Day = 4;
  string Date = 5;
  bool IsOpen = 6;
  bool IsActive = 7;
}

message BusinessUserHourUpdateModel {
  string id = 1; 
  string BusinessUserId = 2;
  string Type = 3;
  int32 Day = 4;
  string Date = 5;
  bool IsOpen = 6;
  bool IsActive = 7;
  }

message BusinessUserHourUpdateResponse {
  string id = 1; 
  string BusinessUserId = 2;
  string Type = 3;
  int32 Day = 4;
  string Date = 5;
  bool IsOpen = 6;
  bool IsActive = 7;
}

message BusinessUserHourSearchModel {
  string businessUserId = 1;
  bool isActive = 2;
}

message BusinessUserHourSearchResponse {
  string id = 1; 
  string BusinessUserId = 2;
  string Type = 3;
  int32 Day = 4;
  string Date = 5;
  string IsOpen = 6;
  bool IsActive = 7;
}

message BusinessUserHourDeleteModel {
    string id = 1;
}

  message BusinessUserHourDeleteResponse {
    string id = 1;
}

service BusinessUserHours {
    rpc Create(BusinessUserHourCreateModel) returns (BusinessUserHourCreateResponse);
    rpc GetById(BusinessUserHourGetByIdModel) returns (BusinessUserHourGetByIdResponse) {};
    rpc Search(BusinessUserHourSearchModel) returns (BusinessUserHourSearchResponse) {};
    rpc Update(BusinessUserHourUpdateModel) returns (BusinessUserHourUpdateResponse) {};
    rpc Delete(BusinessUserHourDeleteModel) returns (BusinessUserHourDeleteResponse) {};

}